<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.r4sh33d.currencyconverter.activities.ConversionActivity">

    <include android:id="@+id/include"
        layout="@layout/item_currency_list"  />

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include"
        android:layout_margin="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/linearlayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/baseCurrencySymbol"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="6dp"
                    android:src="@drawable/nigeria_naira_currency_symbol" />

                <EditText
                    android:id="@+id/editTextBaseCurrency"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="13dp"
                    android:layout_marginStart="13dp"
                    android:background="@drawable/rounded_edittext"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/baseCurrencyShortCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="USD"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearlayout2"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_below="@+id/linearlayout1"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="6dp"
                    android:src="@drawable/bitcoin_logo" />

                <EditText
                    android:id="@+id/editTextBtc"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="13dp"
                    android:layout_marginStart="13dp"
                    android:background="@drawable/rounded_edittext"
                    android:ems="10"
                    android:hint="@string/enter_btc_value"
                    android:inputType="numberDecimal"
                    android:padding="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/btc"
                    android:textColor="@android:color/black"

                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout3"
                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                android:layout_below="@+id/linearlayout2"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="6dp"
                    android:src="@drawable/eth_symbol" />

                <EditText
                    android:id="@+id/editTextETH"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="13dp"
                    android:layout_marginStart="13dp"
                    android:background="@drawable/rounded_edittext"
                    android:ems="10"
                    android:hint="@string/enter_eth_value"
                    android:inputType="numberDecimal"
                    android:padding="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/eth"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardview"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/conversion_activity_int"
        android:textColor="@android:color/black"
        />

</RelativeLayout>
